# Luminate-Shell

./: .gitignore  meson.build
layers/handsight/: meson.build  resources.qrc
layers/handsight/process/: NotificationBackend.cpp  NotificationBackend.h  main.cpp
layers/handsight/ui/: AppTheme.qml  DynamicIsland.qml  Main.qml  Player.qml  qmldir
layers/luminate-edges/: meson.build
layers/luminate-edges/process/: AudioBackend.cpp  AudioBackend.h  CalendarBackend.cpp  CalendarBackend.h  FanBackend.cpp  FanBackend.h  LauncherBackend.cpp  LauncherBackend.h  NotificationBackend.cpp  NotificationBackend.h  PolkitBackend.cpp  PolkitBackend.h  ScreenshotCanvas.cpp  ScreenshotCanvas.h  SystrayBackend.cpp  SystrayBackend.h  TopbarBackend.cpp  TopbarBackend.h
layers/luminate-edges/qml/: AppTheme.qml  AudioModule.qml  CalendarUI.qml  ClockModule.qml  EdgeHelper.qml  EdgeSensor.qml  FanManager.qml  LauncherUI.qml  LuminateEdge.qml  Main.qml  Player.qml  PolkitAuth.qml  PulltabMenu.qml  ScreenshotEditor.qml  StatusBar.qml  SysinfoModule.qml  SystrayMenuNode.qml  SystrayModule.qml  WallpaperChooser.qml  qmldir
layers/luminate-edges/src/: main.cpp  meson.build  resources.qrc
layers/surfacedesk-qml/: meson copy.build  meson.build  resources.qrc
layers/surfacedesk-qml/process/: Storage.cpp  Storage.h  WallpaperBackend.cpp  WallpaperBackend.h  main.cpp
layers/surfacedesk-qml/ui/: AppTheme.qml  Main.qml
layers/surfacedesk-qml/ui/modules/: GridOverlay.qml  InteractiveWidget.qml  WallpaperChooser.qml  WidgetDrawer.qml
layers/surfacedesk-qml/ui/scenes/: AuthScene.qml  ClockConfigPanel.qml  ClockScene.qml  LockScreen.qml  MediaScene.qml  SystemScene.qml  TextScene.qml
src/: main.cpp  meson.build
src/daemons/: insightd.cpp  launcherd.cpp  mediad.cpp  meson.build  notifyd.cpp  osdd.cpp  privacyd.cpp  widgetd.cpp
